ACAD-836 altered run_sis_batch script to aggregate csv files before processing

--- a/modules/sis/templates/run_sis_batch.sh.erb
+++ b/modules/sis/templates/run_sis_batch.sh.erb
@@ -26,14 +26,20 @@ mkdir -p ${CSV_ARCHIVE}
 
 OUTPUT=`mktemp`
 
-# Files will be of the form name.school.csv
-SCHOOL_USERS = "<%=scope.lookupvar('sis::batch::sis_users') %>"
-#SCHOOLS = `ls ${CSV_DIR} | awk -F . '{ print $2 }' | sort | uniq`
+# move files to the CVS_DIR
+SCHOOL_USERS = "<%=scope.lookupvar('sis::batch::sis_users') %>
 
 for schooluser in $SCHOOL_USERS; do
+    mv *.$schooluser.csv $CSV_DIR;
+done
+
+# Files will be of the form name.school.csv
+SCHOOLS = `ls ${CSV_DIR} | awk -F . '{ print $2 }' | sort | uniq`
+
+for school in $SCHOOLS; do
     FILENAME_OPTS="";
     for file in Course Membership User Section SectionMembership; do
-        CSV_FILE="/home/${schooluser}/${file}.${school}.csv"
+        CSV_FILE="${CSV_DIR}/${file}.${school}.csv"
         if [[ -f ${CSV_FILE} ]]; then
             FILENAME_OPTS="${FILENAME_OPTS} -Dfilename@com.rsmart.customer.integration.processor.cle.Cle${file}Processor=${CSV_FILE}" 
         else
@@ -43,7 +49,7 @@ for schooluser in $SCHOOL_USERS; do
     java ${JAVA_OPTS} ${FILENAME_OPTS} \
         -jar $SIS_JAR 2>&1 >> $OUTPUT
     for file in Course Membership User Section SectionMembership; do
-        CSV_FILE="/home/${schooluser}/${file}.${school}.csv"
+        CSV_FILE="${CSV_DIR}/${file}.${school}.csv"
         mv ${CSV_FILE} ${CSV_ARCHIVE}
     done
 done
