--- a/templates/solr.erb
+++ b/templates/solr.erb
@@ -5,11 +5,11 @@
 
 # Global, editable VARS
 SOLR_JAVA_OPTS=" -Dsolr.solr.home=<%= solr_app %> -Djetty.port=8983 "
-SAKAIOAE_USER="<%= scope.lookupvar('oae::params::user') %>"
+SOLR_USER="<%= scope.lookupvar('solr::common::user') %>"
 SOLR_HOME=<%= solr_app %>
 JAVA_BIN="/usr/bin/java"
 
-INIT_PID="/var/run/oae.solr.pid"
+INIT_PID="/var/run/solr.pid"
 
 PROG="solr"
 
@@ -20,22 +20,22 @@ echo "$0 {stop | start | restart | status}"
 
 start() {
 echo -n "Starting $PROG: "
-su --login --command "(cd ${SOLR_HOME} && ${JAVA_BIN} ${SOLR_JAVA_OPTS} -jar ${SOLR_HOME}/start.jar > /dev/null 2>&1 &)" ${SAKAIOAE_USER}
+su --login --command "(cd ${SOLR_HOME} && ${JAVA_BIN} ${SOLR_JAVA_OPTS} -jar ${SOLR_HOME}/start.jar > /dev/null 2>&1 &)" ${SOLR_USER}
 echo $$ > ${INIT_PID};
 echo "done.";
 }
 
 stop() {
 echo "Stopping $PROG: "
-PROCESS=`ps auxwww | grep "^${SAKAIOAE_USER}" | perl -pe 's/^\S*\s*([0-9]+).*\n/\1 /'`
+PROCESS=`ps auxwww | grep "^${SOLR_USER}" | perl -pe 's/^\S*\s*([0-9]+).*\n/\1 /'`
 if [ "${PROCESS}" != "" ] ; then
-  su -c "kill ${PROCESS}" ${SAKAIOAE_USER}
+  su -c "kill ${PROCESS}" ${SOLR_USER}
   sleep 5;
-  PROCESS=`ps auxwww | grep "^${SAKAIOAE_USER}" | perl -pe 's/^\S*\s*([0-9]+).*\n/\1 /'`
+  PROCESS=`ps auxwww | grep "^${SOLR_USER}" | perl -pe 's/^\S*\s*([0-9]+).*\n/\1 /'`
   if [ "${PROCESS}" != "" ] ; then
-    su -c "kill -9 ${PROCESS}" ${SAKAIOAE_USER}
+    su -c "kill -9 ${PROCESS}" ${SOLR_USER}
     sleep 5;
-    PROCESS=`ps auxwww | grep "^${SAKAIOAE_USER}" | perl -pe 's/^\S*\s*([0-9]+).*\n/\1 /'`
+    PROCESS=`ps auxwww | grep "^${SOLR_USER}" | perl -pe 's/^\S*\s*([0-9]+).*\n/\1 /'`
     if [ "${PROCESS}" != "" ] ; then
       echo "failed.";
       exit 1;
@@ -53,10 +53,10 @@ start
 
 status() {
 if [ -f ${INIT_PID} ]; then
-  echo "It seems that the $SOLR app is still running.  If you have issued a stop command already, please wait." ;
+  echo "It seems that the ${PROG} app is still running.  If you have issued a stop command already, please wait." ;
   exit 0;
 else
-  echo "SakaiOAE is not running" ;
+  echo "${PROG} is not running" ;
   exit 2;
 fi
 }
