--- a/modules/rsmart-common/templates/setenv.sh.erb
+++ b/modules/rsmart-common/templates/setenv.sh.erb
@@ -3,5 +3,5 @@
 # filled out via puppet templating
 export JAVA_OPTS="-server -Xms<%= javamemorymin %> -Xmx<%= javamemorymax %> -XX:PermSize=<%= javapermsize %> -XX:NewRatio=3 -XX:+UseParNewGC -XX:+UseConcMarkSweepGC -XX:+CMSParallelRemarkEnabled -XX:MaxTenuringThreshold=0 -XX:-DisableExplicitGC -XX:CMSInitiatingOccupancyFraction=80 -XX:+UseStringCache -XX:+UseCompressedStrings -XX:+OptimizeStringConcat -Djava.awt.headless=true -verbose:gc -XX:+PrintGCDetails -XX:+PrintGCTimeStamps -XX:+PrintGCDateStamps -XX:+PrintTenuringDistribution -XX:+PrintCommandLineFlags"
 
-# AppDynamics support
-#export JAVA_OPTS="$JAVA_OPTS -javaagent:/home/rsmart/appdynfull/current/javaagent.jar -Dappdynamics.agent.applicationName=Academic -Dappdynamics.agent.nodeName=<%= hostname %> -Dappdynamics.agent.tierName=OAE  -Dappdynamics.controller.hostName=fozzie.academic.rsmart -Dappdynamics.controller.port=8090"
+# Load up the AppDynamics options if present
+test -f appdynamics.setenv.sh && source appdynamics.setenv.sh
